--- a/locales/mai.json
+++ b/locales/mai.json
@@ -1,1 +1,5 @@
-{}
+{
+  "Language": "Maithili",
+  "hrs recorded in": "%hours hrs recorded in %language",
+  "hrs validated in": "%hours hrs validated in %language"
+}
