--- a/locales/satdv.json
+++ b/locales/satdv.json
@@ -1,7 +1,7 @@
 {
 	"hrs recorded in": "%hours टाड़ाङ: ध्वनिमुद्रिता: %language रे बाताव एम",
 	"hrs validated in": "%hours टाड़ाङ: प्रमाणीकृता: %language रे बाताव एमाकाना",
-	"Language": "Language",
+	"Language": "Santali DV",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "आले बाबोत ते",
 	"Select the language for contribution": "एनेम ला़गित् पा़रसी बाछाव मे",
