|Sreejith + priyanshu| update translation for konkani

--- a/locales/kd.json
+++ b/locales/kd.json
@@ -37,19 +37,19 @@
 	"Male": "दादलो",
 	"Female": "बायल",
 	"Others": "हेर",
-	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "हावें<a href=\"/terms-and-conditions\"> अटी आणी शर्ती </a> वाचल्यात आणी त्यो म्हाका मान्य आसात.",
 	"LET'S GO": "चला वचूया",
 	"Hide details": "तपशील लिपयात",
 	"Select Your Preferred Language": "तुमची प्राधान्याची भास निवडात",
 	"Terms & Conditions": "अटी आणी शर्ती",
 	"Privacy Policy": "वैयक्तिक धोरण",
 	"Select the language": "भास निवडात",
-	"All Languages": "All Languages",
+	"All Languages": "सगळ्यो भाशा",
 	"Data Last Updated": "निमणी सुदारिल्ली माहिती",
 	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
 	"Contribute Now": "Contribute Now",
 	"hours validated": "hours validated",
-	"Progress Chart": "Progress Chart",
+	"Progress Chart": "प्रगती कालपट",
 	"Monthly": "Monthly",
 	"Quarterly": "Quarterly",
 	"Gender Contribution": "लिंग योगदान",
