--- a/locales/kr.json
+++ b/locales/kr.json
@@ -37,9 +37,9 @@
 	"Male": "Dadle",
 	"Female": "Bailo",
 	"Others": "Her",
-	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "<a href=\"/terms-and-conditions\">Hanvem sotram ani otti vachleat jeo mhaka maneo asat</a>",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "Hanvem <a href=\"/terms-and-conditions\">sotram ani otti </a>vachleat jeo mhaka maneo asat",
 	"LET'S GO": "Chol iea.",
-	"Hide details": "Hide details",
+	"Hide details": "Bariksann Lipoi",
 	"Select Your Preferred Language": "Tuji posontichi bhas vinch",
 	"Terms & Conditions": "Sotram ani otti",
 	"Privacy Policy": "Gupitaiechem dhoronn",
@@ -90,7 +90,7 @@
 	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
 	"Contribute Now": "Contribute Now",
 	"hours validated": "hours validated",
-	"Progress Chart": "Progress Chart",
+	"Progress Chart": "Progotichem Vellapotrok",
 	"Monthly": "Monthly",
 	"Quarterly": "Quarterly",
 	"Gender Contribution": "Linga pormonnem iogdan",
