|Sreejith| update delta translation for Gujarati

--- a/locales/gu.json
+++ b/locales/gu.json
@@ -43,9 +43,8 @@
 	"Vakyansh aims to open source the speech recognition models in various languages, the datasets collected through various channels and the linguistic utilities developed to process and clean the data and make it usable by speech recognition tools.": "Vakyansh aims to open source the speech recognition models in various languages, the datasets collected through various channels and the linguistic utilities developed to process and clean the data and make it usable by speech recognition tools.",
 	"The open source strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "The open source strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.",
 	"Crowd Sourcing & your contribution": "ક્રાઉડ સોર્સિંગ અને તમારો ફાળો",
-	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that includes diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open source repository of Indian voices speaking Indian language which can be used for this initiative and others. The initial plan is to begin with Hindi and then gradually grow the product to other Indic languages. Our goal is to reach approximately 10,000 hrs of dataset for Hindi language at the earliest.": "Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that includes diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open source repository of Indian voices speaking Indian language which can be used for this initiative and others. The initial plan is to begin with Hindi and then gradually grow the product to other Indic languages. Our goal is to reach approximately 10,000 hrs of dataset for Hindi language at the earliest.",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that includes diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open source repository of Indian voices speaking Indian language which can be used for this initiative and others. The initial plan is to begin with Hindi and then gradually grow the product to other Indic languages. Our goal is to reach approximately 10,000 hrs of dataset for Hindi language at the earliest.": "સ્પીચ રેકગ્નિશન \"મશીન લર્નિંગ\" ટેકનોલોજી પર આધાર રાખે છે, જેમાં ડેટાબેસનું મોટું કલેક્શન જરૂરી છે જેમાં જુદા જુદા ભારતીય અવાજો અને સંબંધિત શબ્દોનો સમાવેશ થાય છે. વાક્યાંશ દ્વારા અમે ભારતીય ભાષા બોલતા ભારતીય અવાજનો વિવિધ ખુલ્લો ભંડાર બનાવવા માંગીએ છીએ જેનો ઉપયોગ આ પહેલ માટે કરી શકાય છે",
 	"This is where you come in.": "અહીં તમારા ફાળાની જરૂર પડે છે",
-	"As a team, we are inviting you to join us and contribute 30-45 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "As a team, we are inviting you to join us and contribute 30-45 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.",
 	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "તમારા ફાળાની દરેક મિનિટ એક મોટો તફાવત સર્જે છે અને અમારા લક્ષ્યની નજીક લાવે છે",
 	"ABOUT THE ORGANISATION": "સંગઠન વિશે",
 	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "EkStep ફાઉન્ડેશન ભાગીદારોને આકર્ષિત કરે છે અને સમાજના જટિલ કોયડાઓનો ઉકેલ લાવવા માટે મોટા પાયે ઓપન ઇન્ફ્રાસ્ટ્રક્ચર, ટૂલ્સ અને ફ્રેમવર્ક સર્જે છે. અમે આમ કરવા માટે ઓપન સોર્સ ડિઝિટલ ઇન્ફ્રાસ્ટ્રક્ચરનો વિકાસ કરીને Sunbird તરીકે ઓળખાતા ઇન્ફ્રાસ્ટ્રક્ચરનું સર્જન કર્યું છે અને સોસાઇટલ પ્લેટફોર્મ અપ્રોચ તરીકે ઓળખાતી વિચારસરણી અને કાર્યઢબનું અનુસરણ કરીએ છીએ",
@@ -107,7 +106,7 @@
 	"total hours validated": "કુુલ માન્ય કરેલા",
 	"total hours contributed": "કુલ સહભાગી",
 	"Select the language for contribution": "ફાળા માટે ભાષા પસંદ કરો",
-	"Show All": "બધું બતાવો",
+	"Show All": "બધાને બતાવો",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "વાક્યાંશ: ભારતીય ભાષાઓ માટે એક ક્રાઉડસોર્સિંગની પહેલ",
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "ભારતીય ભાષાઓમાં અવાજ પારખતા મોડલ વિકસાવવા માટે, વિવિધ ભારતીય અવાજોના ઓપન ડેટા ભંડારની જરૂર છે.",
 	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "અવાજ પારખનાર મોડલ્સ બનાવવાની ચાવી, સમગ્ર રાજ્યો અને બોલીઓ દ્વારા પૂરો પાડવામાં આવતો વિવિધ ડેટા છે.",
@@ -125,12 +124,12 @@
 	"Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.": "અવાજ પારખવાની ટેક્નોલોજી એ જીવંત-સમયમાં સ્પીચનું રુપાંતર કરે છે. એવા ભારતીય ભાષાઓમાંના મોડલ જુદા જુદા સેક્ટરોમાં, જેમ કે શિક્ષણ, સારવાર અને મીડિયામાં ડિજિટલ પ્રથમ મોડલનો પ્રથમ પાયો બની શકે છે.",
 	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "એ સાધનો, ઉપકરણો અને મોડલ્સ જેના વિકસાવવા માટે ભલામણ કરવામાં આવે છે, તે વાક્યાંશ ક્રાઉડસોર્સિંગ પ્લેટફોર્મ દ્વારા ઓપન સોર્સ ફાળા પર નિર્ભર રહેશે",
 	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "અવાજ પારખવાની સુવિધા \"મશીન લર્નિંગ\" ટેક્નોલોજી પર આધાર રાખે છે, જેના માટે મોટા ડેટાસેટને ભેગો કરવાની જરૂર પડે છે, જેમાં વિવિધ ભારતીય અવાજો અને સુસંગત ટેક્સ્ટનો સમાવેશ થયેલો હોય. વાક્યાંશ દ્વારા EkStep ભારતીય ભાષાઓમાં અવાજની બોલવાનો વૈવિધ્યસભર ઓપન સંગ્રહ સર્જવા ઇચ્છા રાખે છે, જે આ પહેલ માટે ઉપયોગમાં લઈ શકાય.",
-	"As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "એક ટીમ તરીકે, આ પહેલમાં અમારી સાથે જોડાવા અને 30 મિનિટ માટે તમારો અવાજ આપવા અમે તમને આમંત્રણ આપીએ છીએ. એકધારું તમારા અવાજનું રેકોર્ડિંગ થકવી નાખનારું હોય શકે અને તેથી, તમારા માટે અમારી વેબસાઇટ પર અમે લીનર મેઝર્સનું સર્જન કર્યું છે, જેથી તમે એકથી વધારે વાર મુલાકાત લઈ શકો અને જ્યાંથી બાકી મૂક્યું હોય ત્યાંથી શરૂ કરી શકો",
+	"As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ટીમ તરીકે, અમે તમને અમારી સાથે જોડાવા અને આ પહેલમાં તમારા અવાજનું યોગદાન આપવા માટે આમંત્રણ આપી રહ્યા છીએ. એક લાંબા શ્વાસમાં તમારો અવાજ રેકોર્ડ કરવો મુશ્કેલ શકે છે અને તેથી, અમે અમારી વેબસાઇટ પર સરળ પગલાં બનાવ્યા છે, જેથી કરીને તમે ઘણી વખત અમારી મુલાકાત લો અને જ્યાંથી તમે છોડી દીધું છે તે શરૂ કરો.",
 	"Username cannot be more than 12 characters": "યુઝરનેમ 12 અક્ષરો કરતાં વધુ ન હોવું જોઈએ",
 	"Select the language": "એક ભાષા પસંદ કરો",
 	"All Languages": "તમામ ભાષાઓ",
 	"Data Last Updated": "છેલ્લે અપડેટ કરાયેલો ડેટા",
-	"We do not have any data for this language, would you like to contribute for it?": "અમારી પાસે આ ભાષા માટે કોઈ ડેટા નથી, શું તમે તેના માટે ફાળો આપવા માંગો છો?",
+	"We do not have any data for this language, would you like to contribute for it?": "અમારી પાસે આ ભાષા માટે કોઈ ડેટા નથી, શું તમે ફાળો આપવા ઈચ્છો છો?",
 	"Contribute Now": "હવે ફાળો",
 	"hours validated": "કલાક માન્ય",
 	"Progress Chart": "પ્રગતિની સમયરેખા",
@@ -153,14 +152,15 @@
 	"EkStep Foundation": "EkStep ફાઉન્ડેશન",
 	"hrs recorded in": "%language માં %hours અવાજો રેકોર્ડ કર્યા",
 	"hrs validated in": "%language માં %hours અવાજો રેકોર્ડ કર્યા",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "રેકોર્ડિંગ આપમેળે <span id=\"counter\"></span> સેકંડ પછી બંધ થઈ જશે",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "રેકોર્ડિંગ આપમેળે <span id=\"counter\"></span> સેકન્ડમાં બંધ થઈ જશે",
 	"Incorrect": "ખોટો",
 	"Replay": "ફરી-પ્લે કરો",
-	"Pause": "થોભો",
+	"Pause": "થોભાવો",
 	"Correct": "યોગ્ય",
 	"Skip": "પછી રાખો",
 	"hours": "કલાકો",
 	"minutes": "મિનિટો",
 	"seconds": "સેકન્ડ્સ",
-	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "હોમ પેજ પર જવા માટે અહીં <a class=\"\" href=\"/\">ક્લિક કરો</a>"
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "હોમ પેજ પર જવા માટે અહીં <a class=\"\" href=\"/\">ક્લિક કરો</a>",
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "તમે તમારા અવાજના <b><span id=\"user-contribution\"></span></b> રેકોર્ડિંગનો ફાળો આપેલો છે"
 }
