Add Assamese new translation

--- a/locales/as.json
+++ b/locales/as.json
@@ -56,7 +56,7 @@
 	"Terms of Use": "Terms of Use",
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
 	"Recording Instructions": "বাণীবদ্ধকৰাৰ নিয়মাৱলী",
-	"START": "START",
+	"START": "আৰম্ভ",
 	"Let's get started!": "আৰম্ভ কৰা",
 	"SKIP": "বাদ দিয়া",
 	"STOP RECORDING": "বাণীবদ্ধকৰণ বন্ধ",
@@ -90,7 +90,7 @@
 	"Select Your Preferred Language": "আপোনাৰ পছন্দৰ ভাষাটো নিৰবাচন কৰক",
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
 	"Select the language for contribution": "যোগদান কৰিবৰ বাবে ভাষাটো নিৰবাচন কৰক",
-	"Show All": "Show All",
+	"Show All": "সকলোখিনি দেখুওৱাক",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "বাক্যংশ: ভাৰতীয় ভাশাসমূহৰ বাবে এক ক্ৰাওড চৰ্ছিং পদক্ষেপ",
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": ".ভাৰতীয় ভাষাসমূহৰ কন্ঠ চিনাক্তকৰণ আৰ্হি প্ৰস্তত কৰিবৰ বাবে, বিভিন্ন ভাৰতীয় ভাষাৰ এক বৃহৎ সংখ্যক কন্ঠৰ মুক্ত উৎসৰ প্ৰয়োজন। ভাৰতীয় ভাষাসমূহৰ মুক্ত উৎসৰ আৰ্হি প্ৰস্তুত কৰিবৰ বাবে বাক্যংশই আপোনাক আপোনাৰ কন্ঠ দান কৰিবলৈ নিমন্ত্ৰণ জনাইছে।",
 	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "গোটেই ৰাজ্যসমূহৰ পৰা উপভাষাগত, সুৰ-লহৰ, লিংগ আৰু বয়স অনুসৰি আপেনালেকে যোগান ধৰা তথ্যসমূহ, কন্ঠ চিনাক্তকৰণৰ মুক্ত উৎসৰ আৰ্হি প্ৰস্তুৰ কৰাৰ মূল চাবিকাঠী হব। সমগ্ৰ দেশজুৰি সংগ্ৰহ কৰা তথ্।সমূহে আমাৰ ভাষাক সবলীকৰণ কৰাত সামূহিক শক্তি প্ৰদান কৰিব।",
@@ -129,7 +129,7 @@
 	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
 	"Select the language": "এটা ভাষা বাছনি কৰক",
 	"All Languages": "সকলো ভাষা",
-	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
+	"We do not have any data for this language, would you like to contribute for it?": "এই ভাষাটোৰ বাবে আমাৰ কোনো তথ্য নাই, আপুনি দান কৰিবলৈ ইচ্ছুক নেকি?",
 	"Contribute Now": "Contribute Now",
 	"hours validated": "hours validated",
 	"Progress Chart": "অগ্ৰগতিৰ সময়সীমা",
@@ -145,14 +145,16 @@
 	"to go back to home page": "পুণৰ আগৰ পেজলৈ ঘুৰি যাবলৈ ত",
 	"hrs recorded in": "%hours ঘন্টাত %language ৰেকৰ্ড কৰক",
 	"hrs validated in": "%hours ঘন্টা %language ৰেকৰ্ড কৰক",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "রেকর্ডিং স্বয়ংক্রিয়ভাবে <span id=\"counter\"></span> সেকেন্ড পরে বন্ধ হবে",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> ছেকেণ্ডৰ পিছত আপোনাৰ ৰেকৰডিং নিজে নিজে বন্ধ হ'ব",
 	"Incorrect": "Incorrect",
 	"Replay": "পুনৰ বজাওক",
-	"Pause": "Pause",
+	"Pause": "বিৰাম",
 	"Correct": "Correct",
 	"Skip": "বাদ দিয়ক",
 	"hours": "ঘন্টা",
 	"minutes": "মিনিট",
 	"seconds": "ছেকেণ্ড",
-	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "পুণৰ আগৰ পেজলৈ ঘুৰি যাবলৈ <a class=\"\" href=\"/\">ত ক্লিক কৰক</a>"
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "পুণৰ আগৰ পেজলৈ ঘুৰি যাবলৈ <a class=\"\" href=\"/\">ত ক্লিক কৰক</a>",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative":"ধ্বনি চিনাক্তকৰণ \"মেচিন লাৰ্নিং\" প্ৰযুক্তিৰ ওপৰত নিৰৰ্ভশীল সেয়েহে ইয়াত এক বৃহৎ সংখ্যক ডাটাচেট লাগে, য'ত বিভিন্ন ভাৰতীয় ভাষাৰ কন্ঠ আৰু পাঠ্য দুয়োটাই অন্তৰ্ভূক্ত হৈ থাকে। সেয়েহে আমি বাক্যংশৰ যোগেদি, এনেকুৱা বিবিধ কথিত ভাৰতীয় ভাষাৰ মুক্ত উৎস সৃষ্টি কৰিব বিচাৰিছো যিটো নেকি উদ্যোক্তাসকলে ব্যৱহাৰ কৰিব পাৰিব।",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off":"গোট হিচাপে, আমি আপোনালোকক আমাৰ লগত যোগাদান কৰিবলৈ নিমন্ত্ৰণ জনাইছোঁ আৰু কন্ঠ দান কৰি আমাক উপকৃত কৰক। এক প্ৰসাৰিত আৰু অপতিৰোধ্যভাৱে আপোনালোকে আপোনালোকৰ কন্ঠ ৰেকৰ্ড কৰক, আমি আমাৰ ৱেবচাইটত শিকাৰ উপায় কৰি ৰাখিছোঁ, যাতে আপোনালোকে একাধিকবাৰ দৰ্শন কৰিব পাৰে আৰু যিখিনিত এৰি গৈছিল তাৰ পৰা আকৌ আৰম্ভ কৰিব পাৰে।"
 }
