|Priyanshu + Sreejith| update delta translation for Tamil

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -134,5 +134,6 @@
 	"Page Not Found": "পৃষ্ঠা খুঁজে পাওয়া যায়নি",
 	"Looks like you have taken a wrong turn here": "দেখে মনে হচ্ছে আপনি এখানে কোনও ভুল অভিমুখ নিয়েছেন",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "হোম পৃষ্ঠায় ফিরে যেতে এখানে <a class=\"\" href=\"/\">ক্লিক করুন</a>",
-	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice"
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": ""
 }
