--- a/locales/kn.json
+++ b/locales/kn.json
@@ -144,5 +144,6 @@
 	"hours": "ಗಂಟೆಗಳು",
 	"minutes": "ನಿಮಿಷಗಳು",
 	"seconds": "ಸೆಕೆಂಡುಗಳನ್ನು",
-	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ಮುಖಪುಟಕ್ಕೆ ಹಿಂತಿರುಗಲು <a class=\"\" href=\"/\">ಇಲ್ಲಿ ಅನ್ನು ಒತ್ತಿರಿ</a>"
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ಮುಖಪುಟಕ್ಕೆ ಹಿಂತಿರುಗಲು <a class=\"\" href=\"/\">ಇಲ್ಲಿ ಅನ್ನು ಒತ್ತಿರಿ</a>",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": ""
 }
