--- a/locales/ml.json
+++ b/locales/ml.json
@@ -141,5 +141,5 @@
 	"hours": "മണിക്കൂർ",
 	"minutes": "മിനിറ്റ്",
 	"seconds": "സെക്കൻഡ്",
-	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ഹോം പേജിലേക്ക് തിരികെ പോകാൻ <a class=\"\" href=\"/\">ക്ലിക്ക് ചെയ്യുക</a>"
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ഹോം പേജിലേക്ക് തിരികെ പോകാൻ <a class=\"\" href=\"/\">ക്ലിക്ക് ചെയ്യുക</a>","As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": ""
 }
