--- a/locales/or.json
+++ b/locales/or.json
@@ -157,5 +157,6 @@
 	"hours": "ଘଣ୍ଟା",
 	"minutes": "ମିନିଟ୍",
 	"seconds": "ସେକେଣ୍ଡ",
-	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ହୋମ୍ ପେଜକୁ ଯିବା ପାଇଁ ଏଠାରେ <a class=\"\" href=\"/\"> ଉପରେ କ୍ଲିକ କରନ୍ତୁ।</a>"
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ହୋମ୍ ପେଜକୁ ଯିବା ପାଇଁ ଏଠାରେ <a class=\"\" href=\"/\"> ଉପରେ କ୍ଲିକ କରନ୍ତୁ।</a>",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": ""
 }
