--- a/locales/pa.json
+++ b/locales/pa.json
@@ -154,5 +154,6 @@
 	"hours": "ਘੰਟੇ",
 	"minutes": "ਮਿੰਟ",
 	"seconds": "ਸਕਿੰਟ",
-	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ਹੋਮ ਪੰਨੇ 'ਤੇ ਜਾਣ ਲਈ <a class=\"\" href=\"/\">'ਤੇ ਕਲਿੱਕ ਕਰੋ</a>"
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ਹੋਮ ਪੰਨੇ 'ਤੇ ਜਾਣ ਲਈ <a class=\"\" href=\"/\">'ਤੇ ਕਲਿੱਕ ਕਰੋ</a>",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": ""
 }
