--- a/locales/sa.json
+++ b/locales/sa.json
@@ -122,5 +122,6 @@
 	"Oops": "Oops",
 	"Page Not Found": "पृष्ठं न लब्धम्  |",
 	"Looks like you have taken a wrong turn here": "भवता  अत्र अनुचितं वर्तनं कृतम् इव भासते  |",
-	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "पुन: मूलपृष्ठं गन्तुं अत्र <a class=\"\" href=\"/\">क्लिक्-करोतु |</a>"
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "पुन: मूलपृष्ठं गन्तुं अत्र <a class=\"\" href=\"/\">क्लिक्-करोतु |</a>",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": ""
 }
