--- a/locales/te.json
+++ b/locales/te.json
@@ -125,5 +125,6 @@
 	"Oops": "అయ్యో",
 	"Page Not Found": "పేజీ కనిపించలేదు",
 	"Looks like you have taken a wrong turn here": "మీరు ఇక్కడ తప్పు దారి తీసుకున్నట్టు ఉన్నారు",
-	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "హోమ్ పేజీ లోకి వెళ్ళడానికి <a class=\"\" href=\"/\">క్లిక్ చెయ్యండి</a>"
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "హోమ్ పేజీ లోకి వెళ్ళడానికి <a class=\"\" href=\"/\">క్లిక్ చెయ్యండి</a>",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": ""
 }
