--- a/locales/ur.json
+++ b/locales/ur.json
@@ -163,5 +163,6 @@
 	"hours": "گھنٹے",
 	"minutes": "منٹ",
 	"seconds": "سیکنڈ",
-	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "مبارک ہو ! آپ نے آواز کے نمونوں کے گروپ کی تصدیق کردی ہیں!"
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "مبارک ہو ! آپ نے آواز کے نمونوں کے گروپ کی تصدیق کردی ہیں!",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": ""
 }
