--- a/locales/mnibn.json
+++ b/locales/mnibn.json
@@ -1,5 +1,6 @@
 {
   "Language": "Manipuri BN",
   "hrs recorded in": "%hours hrs recorded in %language",
-  "hrs validated in": "%hours hrs validated in %language"
+  "hrs validated in": "%hours hrs validated in %language",
+  "As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": ""
 }
