--- a/locales/ta.json
+++ b/locales/ta.json
@@ -55,7 +55,7 @@
 	"Vakyansh aims to open source the speech recognition models in various languages, the datasets collected through various channels and the linguistic utilities developed to process and clean the data and make it usable by speech recognition tools.": "Vakyansh aims to open source the speech recognition models in various languages, the datasets collected through various channels and the linguistic utilities developed to process and clean the data and make it usable by speech recognition tools.",
 	"The open source strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "The open source strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.",
 	"Crowd Sourcing & your contribution": "கூட்டுசேகரம் மற்றும் உங்கள் பங்களிப்பு",
-	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that includes diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open source repository of Indian voices speaking Indian language which can be used for this initiative and others. The initial plan is to begin with Hindi and then gradually grow the product to other Indic languages. Our goal is to reach approximately 10,000 hrs of dataset for Hindi language at the earliest.": "பேச்சறிதல் \"இயந்திர கற்றல்\" தொழில்நுட்பத்தை நம்பியுள்ளது. இதற்கு பன்முகப்படுத்தப்பட்ட இந்திய குரல்கள் மற்றும் அதனுடன் தொடர்புடைய உரையை உள்ளடக்கிய தரவுத்தொகுப்புகளின் பெரிய தொகுப்புகள் தேவைப்படுகிறது. ஏக்ஸ்டெப் அறக்கட்டளை, வாகியன்ஷ் மூலம், இந்திய குரல் பேசும் இந்திய மொழியின் மாறுபட்ட திறந்த களஞ்சியத்தை உருவாக்க விரும்புகிறது. இது இந்த முயற்சிக்கு பயன்படுத்தப்படகூடும்.",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that includes diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open source repository of Indian voices speaking Indian language which can be used for this initiative and others. The initial plan is to begin with Hindi and then gradually grow the product to other Indic languages. Our goal is to reach approximately 10,000 hrs of dataset for Hindi language at the earliest.": "பேச்சறிதல் \"இயந்திர கற்றல்\" தொழில்நுட்பத்தை நம்பியுள்ளது. இதற்கு பன்முகப்படுத்தப்பட்ட இந்திய குரல்கள் மற்றும் அதனுடன் தொடர்புடைய உரையை உள்ளடக்கிய தரவுத்தொகுப்புகளின் பெரிய தொகுப்புகள் தேவைப்படுகிறது. வாகியன்ஷ் மூலம், நாங்கள் இந்திய குரல் பேசும் இந்திய மொழியின் மாறுபட்ட திறந்த களஞ்சியத்தை உருவாக்க விரும்புகிறோம். இது இந்த முயற்சிக்கு பயன்படுத்தப்படக்கூடும்.",
 	"This is where you come in.": "நீங்கள் பங்களிக்கப்போவது இங்குதான்",
 	"As a team, we are inviting you to join us and contribute 30-45 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "எங்கள் குழுவிற்காக, எங்களுடன் சே்ந்து, இந்த முயற்சிக்கு உங்கள் குரலில் 30 நிமிடங்கள் வரை பங்களிக்கவும் நாங்கள் உங்களை அழைக்கிறோம். உங்கள் குரலை ஒரே முச்சில் பதிவு செய்வது திணரடிப்பதாக இருக்கலாம், எனவே, நீங்கள் எங்களை வலைத்தளத்தை பலமுறை பார்வையிடவும், நீங்கள் எங்களை விட்டுச் சென்ற இடத்திலிருந்து தொடங்கவும், எங்கள் வலைத்தளத்தில் நாங்கள் எளிய செயலேற்பாடுகளைை உருவாக்கியுள்ளோம்",
 	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "உங்கள் பங்களிப்பின் ஒவ்வொரு நிமிடமும் மிகப்பெரிய வித்தியாசத்தை ஏற்படுத்தும், மேலும் எங்கள் இலக்கை நெருங்கச் செய்யும்",
@@ -68,7 +68,7 @@
 	"Terms of Use": "Terms of Use",
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
 	"Recording Instructions": "பதிவு செய்யும் வழிமுறைகள்",
-	"START": "தொடங்கு",
+	"START": "தொடக்கம்",
 	"Let's get started!": "நாம் தொடங்கலாம்!",
 	"SKIP": "தவிர்",
 	"STOP RECORDING": "பதிவு செய்வதை நிறுத்து",
@@ -106,9 +106,9 @@
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
 	"hrs recorded in": "%hours மணிநேரம் %language இல் பதிவு செய்யப்பட்டுள்ளது",
 	"hrs validated in": "%hours மணிநேரம் %language இல் சரிபார்க்கப்பட்டது",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> விநாடிகளுக்குப் பிறகு பதிவு தானாகவே நிறுத்தப்படும்",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "பதிவு செய்தல் <span id=\"counter\"></span> விநாடிகளுக்குப் பிறகு தானாக நின்றுவிடும்",
 	"Select the language for contribution": "பங்களிப்புக்கான மொழியைத் தேர்ந்தெடுக்கவும்",
-	"Show All": "அனைத்து காட்டு",
+	"Show All": "அனைத்தையும் காட்டு",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "வாகியான்ஷ்: இந்திய  மொழிகளுக்கான ஒரு கூட்டுசேகர முயற்சி",
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "இந்திய மொழிகளில் பேச்சறிதல் மாதிரிகளின் வளர்ச்சிக்கு, பன்முகப்படுத்தப்பட்ட இந்தியக் குரல்களின் திறந்த தரவு களஞ்சியத்தின் தேவை உள்ளது. இந்திய குரல்களின் மாறுபட்ட திறந்த தரவு களஞ்சியத்தை உருவாக்க உங்கள் குரலை பங்களிக்க வக்யான்ஷ் உங்களை அழைக்கிறது.",
 	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "நீங்கள் பங்களிக்கும் மாநிலங்கள், பேச்சுவழக்குகள், உச்சரிப்புகள், பாலினம் மற்றும் வயது பிரிவு போன்ற பலதரப்பட்ட தரவின் பன்முகத்தன்மை, பேச்சறிதல் மாதிரிகளை உருவாக்குவதற்கான அத்தியாவசியமான ஒன்றாகும்.  நாடு எங்கிலும் உள்ள இந்த பன்முகத்தன்மையின் முக்கியத்துவம், நமது மொழிகளை மேம்படுத்துவதில் கூட்டு வலிமையை அளிக்கிறது.",
@@ -126,7 +126,7 @@
 	"Select the language": "ஒரு மொழியைத் தேர்ந்தெடுக்கவும்",
 	"All Languages": "எல்லா மொழிகள்",
 	"Data Last Updated": "தரவு கடைசியாக புதுப்பிக்கப்பட்ட நேரம்",
-	"We do not have any data for this language, would you like to contribute for it?": "இந்த மொழிக்கான தரவு எதுவும் எங்களிடம் இல்லை, அதற்கு நீங்கள் பங்களிக்க விரும்புகிறீர்களா?",
+	"We do not have any data for this language, would you like to contribute for it?": "இந்த மொழிக்கான எந்த தரவும் எங்களிடம் இல்லை, நீங்கள் அதை பங்களிக்க விரும்புகிறீர்களா?",
 	"Contribute Now": "இப்போது பங்களிக்கவும்",
 	"hours validated": "மணிநேரம் சரிபார்க்கப்பட்டது",
 	"Progress Chart": "முன்னேற்ற காலவரிசை",
@@ -160,9 +160,9 @@
 	"Thank you for validating!": "சரிபார்த்ததற்கு நன்றி!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> குரல் மாதிரிகளை சரிபார்க்க எங்களுக்கு உதவியுள்ளீர்கள்",
 	"Validate More": "மேலும் சரிபார்க்க",
-	"Incorrect": "தவறான",
+	"Incorrect": "தவறு",
 	"Replay": "மறுபடி இயக்கு",
-	"Pause": "இடைநிறுத்தம்",
+	"Pause": "இடைநிறுத்து",
 	"Correct": "சரி",
 	"Skip": "தவிர்",
 	"Congratulations! You have contributed a batch of your voice!": "வாழ்த்துக்கள்! உங்கள் குரலில் ஒரு தொகுதி பங்களித்துள்ளீர்கள்!",
@@ -175,5 +175,23 @@
 	"Click Here": "சொடுக்கவும் இங்கே",
 	"to go back to home page": "முகப்புப் பக்கத்துக்கு செல்ல",
 	"seconds": "வினாடிகள்",
-	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "முகப்புப் பக்கத்துக்கு செல்ல இங்கே <a class=\"\" href=\"/\">என்னும் இடத்தில்</a> சொடுக்கவும்"
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "முகப்புப் பக்கத்துக்கு செல்ல இங்கே <a class=\"\" href=\"/\">என்னும் இடத்தில்</a> சொடுக்கவும்",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": "எங்கள் குழுவிற்காக, எங்களுடன் சேர்ந்து, இந்த முயற்சிக்கு உங்கள் குரலை  பங்களிக்க நாங்கள் உங்களை அழைக்கிறோம். உங்கள் குரலை ஒரே மூச்சில் பதிவு செய்வது திணரடிப்பதாக இருக்கலாம், எனவே, நீங்கள் எங்களை வலைத்தளத்தை பலமுறை பார்வையிடவும், நீங்கள் எங்களை விட்டுச் சென்ற இடத்திலிருந்து தொடங்கவும், எங்கள் வலைத்தளத்தில் நாங்கள் எளிய செயலேற்பாடுகளைை உருவாக்கியுள்ளோம்",
+	"Test your Microphone and Speakers": "உங்கள் ஒலிவாங்கி மற்றும் ஒலிபெருக்கியை  சோதிக்க",
+	"Test Mic": "ஒலிவாங்கியை சோதிக்க",
+	"Test Speaker": "ஒலிபெருக்கியை சோதிக்க",
+	"Recording": "பதிவு செய்யப்படுகிறது",
+	"Playing": "வாசிக்கப்படுகிறது",
+	"Recorded": "பதிவுசெய்யப்பட்டது",
+	"Validated": "சரிபார்க்கப்பட்டது",
+	"Contributed": "பங்களிக்கப்பட்டது",
+	"Other languages": "பிற மொழிகள்",
+	"More languages": "மேலும் பிற மொழிகள்",
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "உங்கள்  குரலில் <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> பதிவுகளை பங்களித்துள்ளீர்",
+	"Thank you for validating \"x\" recordings": "\"X\" பதிவுகளை சரிபார்த்ததற்கு நன்றி",
+	"Quick tips": "விரைவு குறிப்புகள்",
+	"Read once before recording it": "பதிவு செய்யும் முன் இதை ஒருமுறை படிக்கவும்",
+	"By proceeding ahead you agree to the Terms and Conditions": "மேலே தொடர்வதன் மூலம், நீங்கள் விதிமுறைகள் மற்றும் நிபந்தனைகளை ஒப்புக்கொள்கிறீர்கள்",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.",
+	"Thank you for validating <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> பதிவுகளை சரிபார்த்ததற்கு நன்றி"
 }
