--- a/locales/mr.json
+++ b/locales/mr.json
@@ -161,5 +161,5 @@
 	"minutes": "मिनिटे",
 	"seconds": "सेकंद",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "होम पेजवर परत जाण्यासाठी <a class=\"\" href=\"/\">इथे क्लिक करा</a>",
-	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": ""
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off."
 }
