--- a/locales/gu.json
+++ b/locales/gu.json
@@ -162,5 +162,6 @@
 	"minutes": "મિનિટો",
 	"seconds": "સેકન્ડ્સ",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "હોમ પેજ પર જવા માટે અહીં <a class=\"\" href=\"/\">ક્લિક કરો</a>",
-	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "તમે તમારા અવાજના <b><span id=\"user-contribution\"></span></b> રેકોર્ડિંગનો ફાળો આપેલો છે"
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "તમે તમારા અવાજના <b><span id=\"user-contribution\"></span></b> રેકોર્ડિંગનો ફાળો આપેલો છે",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off."
 }
