--- a/locales/ml.json
+++ b/locales/ml.json
@@ -75,7 +75,7 @@
 	"Ensure there is <b>no background noise</b>": "പശ്ചാത്തല ശബ്ദമൊന്നും ഇല്ലെന്ന് ഉറപ്പാക്കുക",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "റെക്കോർഡ് ചെയ്യുന്നതിന് മുൻപ്, കാണിക്കുന്ന വാക്കുകൾ ഉറക്കെ വായിച്ച് പരിചയപ്പെടുക",
 	"Get started by clicking on <b>Record</b> button": "റെക്കോർഡ് ബട്ടണിൽ ക്ലിക്ക് ചെയ്തുകൊണ്ട് ആരംഭിക്കുക",
-	"START": "START",
+	"START": "ആരംഭിക്കുക",
 	"Error!!!": "പിശക്!!!",
 	"An unexpected error occured while processing your request. Please try after some time.": "നിങ്ങളുടെ അഭ്യർത്ഥന പ്രോസസ് ചെയ്യുമ്പോൾ ഒരു അപ്രതീക്ഷിത പിശകുണ്ടായി. കുറച്ചു സമയത്തിനു ശേഷം വീണ്ടും ശ്രമിക്കുക.",
 	"Close": "അടയ്ക്കുക",
@@ -122,7 +122,7 @@
 	"would you like to contribute for it?": "അതിനായി സംഭാവന നൽകാൻ നിങ്ങൾ ആഗ്രഹിക്കുന്നുണ്ടോ?",
 	"Enter preferred username": "ഇഷ്ടമുള്ള യൂസർനെയിം നൽകുക",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "<span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> ഭാഷയിൽ സംഭാവന ചെയ്യപ്പെട്ട <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> ശബ്ദ സാമ്പിളുകളിൽ <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> ശബ്ദ സാമ്പിളുകൾ സാധൂകരിക്കാൻ നിങ്ങൾ ഞങ്ങളെ സഹായിച്ചിരിക്കുന്നു.",
-	"We do not have any data for this language, would you like to contribute for it?": "ഈ ഭാഷയ്‌ക്കായി ഞങ്ങൾക്ക് ഡാറ്റയൊന്നുമില്ല, അതിനായി സംഭാവന നൽകാൻ നിങ്ങൾ ആഗ്രഹിക്കുന്നുണ്ടോ?",
+	"We do not have any data for this language, would you like to contribute for it?": "ഈ ഭാഷയുടെ ഡാറ്റയൊന്നും ഞങ്ങളുടെ കൈവശമില്ല, ഇതിലേക്ക് സംഭാവന ചെയ്യാൻ താത്പര്യമുണ്ടോ?",
 	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
 	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
 	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
@@ -130,10 +130,10 @@
 	"EkStep Foundation": "ഏക്സ്റ്റെപ്പ് ഫൗണ്ടേഷൻ",
 	"hrs recorded in": "%language ഭാഷയിൽ %hours എണ്ണം റെക്കോർഡ് ചെയ്തിട്ടുണ്ട്",
 	"hrs validated in": "%language ഭാഷയിൽ %hours എണ്ണം സാധൂകരിച്ചിട്ടുണ്ട്",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> സെക്കൻഡിനുശേഷം റെക്കോർഡിംഗ് യാന്ത്രികമായി നിർത്തും",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> സെക്കൻ്റിന് ശേഷം റെക്കോർഡിംഗ് താനേ നിൽക്കും",
 	"Incorrect": "തെറ്റായ",
 	"Replay": "വീണ്ടും പ്ലേ ചെയ്യുക",
-	"Pause": "വിരാമം",
+	"Pause": "താൽക്കാലികമായി നിർത്തുക",
 	"Correct": "ശരിയായ",
 	"Skip": "ഒഴിവാക്കുക",
 	"hours": "മണിക്കൂർ",
@@ -141,5 +141,7 @@
 	"seconds": "സെക്കൻഡ്",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ഹോം പേജിലേക്ക് തിരികെ പോകാൻ <a class=\"\" href=\"/\">ക്ലിക്ക് ചെയ്യുക</a>",
 	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "വൈവിധ്യമാർന്ന ഇന്ത്യൻ ശബ്ദങ്ങളും അനുബന്ധ വാചകവും ഉൾപ്പെടുന്ന ഡാറ്റാസെറ്റുകളുടെ വലിയ ശേഖരം ആവശ്യമുള്ള \"മെഷീൻ ലേണിങ്\" സാങ്കേതികവിദ്യയെ ശബ്ദം തിരിച്ചറിയൽ (സ്പീച്ച് റെക്കഗ്നിഷൻ) ആശ്രയിക്കുന്നു. വാക്യാംശിലൂടെ, ഈ സംരംഭത്തിനായി ഉപയോഗിക്കാൻ സാധിക്കുന്ന വിധത്തിൽ, ഇന്ത്യൻ ഭാഷകൾ സംസാരിക്കുന്ന ഇന്ത്യൻ ശബ്ദങ്ങളുടെ വൈവിധ്യപൂർണ്ണമായ തുറന്ന ശേഖരമുണ്ടാക്കണമെന്ന് ഞങ്ങൾ ആഗ്രഹിക്കുന്നു.",
-	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ഒരു ടീം എന്ന നിലയിൽ, ഞങ്ങളോടൊപ്പം ചേരാനും ഈ സംരംഭത്തിലേക്ക് നിങ്ങളുടെ ശബ്ദം സംഭാവന നൽകാനും ഞങ്ങൾ നിങ്ങളെ ക്ഷണിക്കുന്നു. നിങ്ങളുടെ ശബ്ദം ഒരു അവസരത്തിൽ പൂർണ്ണമായി റെക്കോർഡ് ചെയ്യുന്നതിൽ ബുദ്ധിമുട്ടുണ്ടാവാമെന്നതിനാൽ, ഞങ്ങളുടെ വെബ്സൈറ്റ് പല തവണകളിലായി സന്ദർശിച്ച് നിങ്ങൾ നിർത്തിയിടത്തു നിന്ന് തുടങ്ങാനുള്ള സംവിധാനം ഞങ്ങൾ ഒരുക്കിയിട്ടുണ്ട്."
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ഒരു ടീം എന്ന നിലയിൽ, ഞങ്ങളോടൊപ്പം ചേരാനും ഈ സംരംഭത്തിലേക്ക് നിങ്ങളുടെ ശബ്ദം സംഭാവന നൽകാനും ഞങ്ങൾ നിങ്ങളെ ക്ഷണിക്കുന്നു. നിങ്ങളുടെ ശബ്ദം ഒരു അവസരത്തിൽ പൂർണ്ണമായി റെക്കോർഡ് ചെയ്യുന്നതിൽ ബുദ്ധിമുട്ടുണ്ടാവാമെന്നതിനാൽ, ഞങ്ങളുടെ വെബ്സൈറ്റ് പല തവണകളിലായി സന്ദർശിച്ച് നിങ്ങൾ നിർത്തിയിടത്തു നിന്ന് തുടങ്ങാനുള്ള സംവിധാനം ഞങ്ങൾ ഒരുക്കിയിട്ടുണ്ട്.",
+	"Feedback": "Feedback",
+	"<b>Read once</b> before recording it": "റെക്കോർഡ് ചെയ്യുന്നതിനു മുൻപ് <b>ഒരു തവണ വായിച്ചു നോക്കുക</b>"
 }
