|Sreejith| update 12th march content Odia

--- a/locales/or.json
+++ b/locales/or.json
@@ -111,7 +111,7 @@
 	"VIEW ALL DETAILS": "ସମସ୍ତ ସବିଶେଷକୁ ଦେଖନ୍ତୁ",
 	"Select Age Group": "ବୟସ ଗ୍ରୁପ ବାଛନ୍ତୁ",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
-	"Show All": "ସମସ୍ତ ଦେଖାନ୍ତୁ",
+	"Show All": "ସବୁକୁ ଦେଖାନ୍ତ",
 	"Enter preferred username": "ପସନ୍ଦର ୟୁଜରନେମ ଏଣ୍ଟର କରନ୍ତୁ",
 	"Username cannot be more than 12 characters": "ୟୁଜରନେମ 12 ଟି କ୍ୟାରେକ୍ଟରରୁ ଅଧିକ ହେବ ନାହିଁ",
 	"Data Last Updated": "ଶେଷରେ ଅପଡେଟ୍ ହୋଇଥିବା ତାରିଖ",
